--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -35,6 +35,9 @@ body{
     font-family: 'Poppins', 'Roboto', sans-serif;
     max-width: 960px; 
     margin: 0 5%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 button{
     color: black;
@@ -148,3 +151,7 @@ input[type='checkbox'] {
     width: 80%;
     height: 50%;
 }
+
+footer {
+    margin-top: auto;
+  }
