--- a/Exercise/Vanstory-Activity11.css
+++ b/Exercise/Vanstory-Activity11.css
@@ -13,11 +13,11 @@ h1 {
 	font-size: 150%;
 	margin-bottom: .5em;
 }
-ul {
+/* ul {
 	padding-left: 45px;
 }
 li {
 	padding-bottom: .5em;
 }
 p {
-}
+} */
