--- a/project/css/default.css
+++ b/project/css/default.css
@@ -1,16 +1,19 @@
-*{
-    background-color: rgb(32, 31, 31);
-    color: whitesmoke;
+html{
+  min-height: 100%;
+  background: linear-gradient(pink 0%, rgb(241, 109, 241) 50%, white 100%);
+}
+body{
+  height: 100%;
 }
 
 a{
     text-decoration: none;
-    color: lightGray;
+    color: purple;
 }
 
 nav{
     text-decoration: none;
-    color: lightGray;
+    color: gray;
 }
 
 h1{
@@ -19,12 +22,12 @@ h1{
 }
 
 #center {
-    padding-left: 20%;
+    padding-left: 15%;
 }
 
-h3{
+/* h3{
     font-size: 30px;
-}
+} */
 
 img{
     max-height: 400px;
@@ -36,34 +39,6 @@ figcaption{
     text-align: center;
 }
 
-.slideshow-container {
-    max-width: 500px;
-    position: relative;
-    margin: auto;
-  }
-  .mySlides {
-    display: none;
-  }
-  .prev, .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    margin-top: -22px;
-    padding: 16px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-  }
-  .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-  }
-  .prev:hover, .next:hover {
-    background-color: rgba(0,0,0,0.8);
-  }
   .text {
     color: #f2f2f2;
     font-size: 15px;
@@ -96,3 +71,34 @@ figcaption{
   p{
     padding-left: 10px;
   }
+
+  .ui-widget-content {
+    background-color: rgb(32, 31, 31);
+    color: whitesmoke;
+    background: none;
+  }
+
+  .ui-accordion .ui-accordion-header {
+    background-color: rgb(32, 31, 31);
+    color: whitesmoke;
+  }
+
+  .ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited {
+    color: black;
+  }
+
+  .ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited {
+    color: black;
+  }
+
+  #topbar{
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+    width: 100%; 
+    background: black;
+  }
+
+.typed-cursor{
+  opacity: 0;
+}
