--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -1,18 +1,40 @@
 /* Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,200&family=Roboto&family=Roboto+Condensed&family=Source+Sans+Pro&display=swap');
 
+/* Global Styles */
+body {
+    background-color: #222629;
+    color: white;
+    font-family: 'Poppins', 'Roboto', sans-serif;
+    padding: 0 20px; /* Added padding to the sides */
+}
+
+.container {
+    max-width: 960px;
+    margin: 0 auto;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 /* Table Styling */
 table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
     text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black;
+    width: 100%;
+    max-width: 100%;
 }
+
 tr:nth-child(even) {
     background-color: #8b74b1;
 }
+
 tr:nth-child(odd) {
     background-color: rgb(185, 181, 255);
 }
+
 tr:nth-child(1) {
     background-color: rgb(107, 107, 255);
 }
@@ -34,18 +56,6 @@ label {
     color: #61892f;
 }
 
-/* Body Styles */
-body {
-    background-color: #222629;
-    color: white;
-    font-family: 'Poppins', 'Roboto', sans-serif;
-    max-width: 960px;
-    margin: 0 5%;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-}
-
 /* Button Styles */
 button {
     color: black;
@@ -57,9 +67,6 @@ button {
 a {
     color: rgb(70, 141, 0);
     font-family: 'arial';
-}
-
-a:link {
     text-decoration: none;
 }
 
@@ -121,46 +128,14 @@ input[type='checkbox'] {
 /* Grid Styles */
 .grid-container {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 100px;
-}
-
-@media (max-width: 850px) {
-    .grid-container {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-gap: 100px;
-    }
-}
-
-/* Calculator Button Styles */
-.calcbuttons {
-    color: black;
-    background-color: gray;
-    border-color: white;
-    width: 100px;
-    height: 100px;
-    font-size: 25px;
-}
-
-.calculator {
-    width: 800px;
-    margin: 0 auto;
-}
-
-.calculator .numbers {
-    width: 100%;
-    height: 60px;
-    font-size: 32px;
-    margin: 0 auto;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 20px;
 }
 
 /* Slide Image Styles */
 .slideimage {
-    width: auto;
+    max-width: 100%;
     height: auto;
-    max-width: 500px;
-    max-height: 500px;
 }
 
 .prev, .next {
@@ -179,8 +154,8 @@ input[type='checkbox'] {
 
 /* Figure Image Styles */
 .figimage {
-    width: 80%;
-    height: 50%;
+    max-width: 100%;
+    height: auto;
 }
 
 /* Footer Styles */
@@ -190,6 +165,6 @@ footer {
 
 /* Screenshot Styles */
 .screenshot {
-    max-width: 500px;
-    width: 100%;
+    max-width: 100%;
+    height: auto;
 }
