--- a/ITCS3162/styles/default.css
+++ b/ITCS3162/styles/default.css
@@ -21,6 +21,38 @@
     text-decoration: underline;
   }
   
+ 
+  table {
+    border-collapse: collapse;
+    width: 80%;
+    margin: 20px auto;
+    max-width: 100%;
+}
+
+th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 10px;
+    text-align: center;
+}
+
+th {
+    background-color: rgb(119, 17, 235); /* Purple color */
+    color: white;
+}
+
+tr:nth-child(even) {
+    background-color: #8b74b1; /* Purple color for even rows */
+}
+
+tr:nth-child(odd) {
+    background-color: rgb(185, 181, 255); /* Light purple color for odd rows */
+}
+
+tr:nth-child(1) {
+    background-color: rgb(107, 107, 255); /* Darker purple color for the first row */
+}
+
   /* Responsive padding adjustments */
   @media screen and (max-width: 600px) {
     /* Adjust padding for screens up to 600px wide */
