modified for better mobile viewing

--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -22,3 +22,9 @@ nav {
     background-color: #444; /* Slightly lighter background color on hover */
     color: #fff; /* White color on hover */
   }
+  .navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+  }
