--- a/src/About/About.css
+++ b/src/About/About.css
@@ -1,22 +1,24 @@
+
 #about-me {
     text-align: center;
     color: #333;
-    padding-top: 3%;
+    padding-top: var(--navbar-height, 5%);
+
   }
-  
+
+  .navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+  }
+
   #about-content {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 2rem auto;
     max-width: 800px;
-  }
-  
-  .about-photo {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    margin-bottom: 1rem;
   }
   
   .about-text p {
@@ -39,3 +41,30 @@
     background-color: #0056b3;
   }
   
+ h1{
+  padding-top: 5%;
+ }
+
+ p{
+  color: black;
+ }
+
+ @media screen and (max-width: 800px) {
+  p{
+    color: white;
+  }
+  *{
+    background-color: gray;
+  }
+  #about-me {
+    padding-top: 10rem;
+    background-color: gray;
+  }
+  
+  .navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+  }
+ }
