--- a/src/About/About.css
+++ b/src/About/About.css
@@ -52,13 +52,14 @@
  @media screen and (max-width: 800px) {
   p{
     color: white;
+    text-shadow: 1px 1px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
   }
-  *{
+  /* *{
     background-color: gray;
-  }
+  } */
   #about-me {
     padding-top: 10rem;
-    background-color: gray;
+    /* background-color: gray; */
   }
   
   .navbar {
