--- a/src/portfolio/Resume/Resume.css
+++ b/src/portfolio/Resume/Resume.css
@@ -1,44 +1,86 @@
 body, html {
-    overflow-y: auto;
-    max-height: 100vh;
-    margin: 0;
-    
-  }
-  
-  #resume-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;  /* Vertically centers the content */
-    
-    min-height: 100vh;
-    text-align: center;
-  }
-  
-  .resume{
-    padding-top: 3%;
-  }
+  overflow-y: auto;
+  max-height: 100vh;
+  margin: 0;
+}
 
+#resume-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;  /* Vertically centers the content */
+  min-height: 100vh;
+  text-align: center;
+}
+
+.resume {
+  padding-top: 3%;
+}
+
+h1 {
+  font-size: 3rem; /* Use rem units for better scalability */
+  margin: 1rem;
+  color: black;
+  margin-top: 4vw; /* Adjust this value as needed to create space from the navbar */
+}
+
+.resume-link {
+  display: inline-block;  /* Ensure the link takes only the width of the image */
+}
+
+.resume-image {
+  width: 50%; /* Set the image width to 50% of the parent */
+  height: auto; /* Maintain aspect ratio */
+  display: block; /* Make the image a block element */
+  margin: 0 auto; /* Ensure the image is centered */
+}
+
+a {
+  display: inline-block; /* Makes the anchor only as wide as its content (the image) */
+  text-decoration: none; /* Removes underline, optional */
+  width: auto; /* Ensure no width is applied to the link */
+}
+
+/* Media queries for responsiveness */
+@media (max-width: 1200px) {
+  .resume-image {
+      width: 60%;
+  }
 
   h1 {
-    font-size: 300%;
-    margin: 1rem;
-    color: black;
+      font-size: 2.5rem;
+      margin-top: 8vw; /* Adjust this value as needed */
   }
-  
-  .resume-link {
-    display: inline-block;  /* Ensure the link takes only the width of the image */
-  }
-  
+}
+
+@media (max-width: 992px) {
   .resume-image {
-    width: 50%; /* Set the image width to 50% of the parent */
-    height: auto; /* Maintain aspect ratio */
-    display: block; /* Make the image a block element */
-    margin: 0 auto; /* Ensure the image is centered */
+      width: 70%;
   }
-  
-  a {
-    display: inline-block; /* Makes the anchor only as wide as its content (the image) */
-    text-decoration: none; /* Removes underline, optional */
-    width: auto; /* Ensure no width is applied to the link */
+
+  h1 {
+      font-size: 2rem;
+      margin-top: 6vw; /* Adjust this value as needed */
   }
-  
+}
+
+@media (max-width: 768px) {
+  .resume-image {
+      width: 80%;
+  }
+
+  h1 {
+      font-size: 1.75rem;
+      margin-top: 10vw; /* Adjust this value as needed */
+  }
+}
+
+@media (max-width: 576px) {
+  .resume-image {
+      width: 90%;
+  }
+
+  h1 {
+      font-size: 1.5rem;
+      margin-top: 35vw; /* Adjust this value as needed */
+  }
+}
